libs/preprocessor/tests/errors/pe7_if_unit_or_function/source.hpp
#define arma

#if arma
#include <arma>
#endif
